@@ -1,5 +1,11 @@
 package com.bakdata.conquery.apiv1.query.concept.specific;
 
+import java.util.*;
+import java.util.stream.Collectors;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
+
 import com.bakdata.conquery.apiv1.forms.export_form.ExportForm;
 import com.bakdata.conquery.apiv1.query.CQElement;
 import com.bakdata.conquery.apiv1.query.concept.filter.CQTable;
@@ -26,19 +32,14 @@ import com.bakdata.conquery.models.query.queryplan.filter.FilterNode;
 import com.bakdata.conquery.models.query.queryplan.specific.ConceptNode;
 import com.bakdata.conquery.models.query.queryplan.specific.OrNode;
 import com.bakdata.conquery.models.query.resultinfo.ResultInfo;
+import com.bakdata.conquery.util.validation.ResolvableId;
 import com.fasterxml.jackson.annotation.*;
 import io.dropwizard.validation.ValidationMethod;
-import jakarta.validation.Valid;
-import jakarta.validation.constraints.NotEmpty;
-import jakarta.validation.constraints.NotNull;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.ToString;
 import lombok.extern.slf4j.Slf4j;
-
-import java.util.*;
-import java.util.stream.Collectors;
 
 @Getter
 @Setter
@@ -50,7 +51,8 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 
 	@JsonProperty("ids")
 	@NotEmpty
-	private List<ConceptElementId<?>> elements = Collections.emptyList();
+	@Valid
+	private List<@ResolvableId ConceptElementId<?>> elements = Collections.emptyList();
 
 	@Valid
 	@NotEmpty
@@ -59,7 +61,7 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 	private List<CQTable> tables = Collections.emptyList();
 
 	@NotNull
-	private List<SelectId> selects = new ArrayList<>();
+	private List<@ResolvableId SelectId> selects = new ArrayList<>();
 
 	private boolean excludeFromTimeAggregation;
 
@@ -173,7 +175,7 @@ public class CQConcept extends CQElement implements NamespacedIdentifiableHoldin
 
 	@JsonIgnore
 	public ConceptId getConceptId() {
-		return elements.get(0).findConcept();
+		return elements.getFirst().findConcept();
 	}
 
 	@JsonIgnore
